--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "modernizr": "~2.8.2",
     "jquery-validate": "~1.12.0",
     "Font-Awesome": "~4.1.0",
-    "qtip2": "~2.2.0"
+    "qtip2": "~2.2.0",
+    "mobiscroll": "~2.11.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
