--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery-validate": "~1.12.0",
     "Font-Awesome": "~4.1.0",
     "qtip2": "~2.2.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "fastclick": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
